<resources>
    <string name="app_name">arQos pocket</string>
    <string name="app_language">English</string>
    <string name="dialog_title">Alert</string>
    <string name="dialog_text">There is already at least one test executing.</string>
    <string name="dialog_button">Ok</string>
    <string name="na">NA</string>
    <string name="unavailable">Unavailable</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="english">English</string>
    <string name="portuguese">Portuguese</string>
    <string name="french">French</string>
    <string name="dashboard">Dashboard</string>
    <string name="anomalies">Anomaly</string>
    <string name="tests">Tests</string>
    <string name="settings">Settings</string>
    <string name="about">ArQos pocket</string>
    <string name="help">Help</string>
    <string name="homepage">Homepage</string>
    <string name="language">Language</string>
    <string name="radiologs">Radiologs/Snapshots</string>
    <string name="development">Development tests</string>
    <string name="network_unavailable">Unavailable</string>
    <string name="horario">Schedule</string>
    <string name="location_info">Identificação do local</string>
    <string name="feedback">Feedback</string>
    <string name="sliddingmenu_log_label">Historic</string>
    <string name="settings_network_to_send_logs">Network for sending the logs</string>
    <string name="settings_wifi_only_label">Only via Wi-Fi</string>
    <string name="settings_wifi_priority_label">Preferably via Wi-Fi</string>
    <string name="settings_any_network_label">Any network</string>
    <string name="settings_log_upload_periodicity">Frequency on log sending</string>
    <string name="settings_daily_label">Daily</string>
    <string name="settings_dashboard_label">Dashboard</string>
    <string name="settings_management_connection">Connection to Management System</string>
    <string name="settings_automatic">Automatic</string>
    <string name="settings_manual">Manual</string>
    <string name="settings_radiologs">Radiologs Register</string>
    <string name="settings_storage">Storage</string>
    <string name="settings_max">Max occupied by APP on the device</string>
    <string name="connected">Connected</string>
    <string name="not_connected">Not connected</string>
    <string name="establishing_connection">... Connecting</string>
    <string name="receveing_configurations">Réception des configurations...</string>
    <string name="sending_configurations">Sending data...</string>
    <string name="try_again_connect">Repetition in 12 sec...</string>
    <string name="settings_pending_test">Pending tests</string>
    <string name="wifi">Wi-Fi</string>
    <string name="mbps">Mbps</string>
    <string name="network_type_2g">2G</string>
    <string name="network_type_3g">3G</string>
    <string name="network_type_4g">4G</string>
    <string name="mobile_state">mobile_state</string>
    <string name="network_mode">network_mode</string>
    <string name="operator_code">operator_code</string>
    <string name="rx_level">rx_level</string>
    <string name="lac">LAC/TAC</string>
    <string name="link_speed">link_speed</string>
    <string name="ssid">ssid</string>
    <string name="wifi_version">Wi-Fi Version</string>
    <string name="bit_error_rate">Bit Error Rate</string>
    <string name="cid">CID</string>
    <string name="dbm_ber">dBm (BER)</string>
    <string name="dbm">dBm</string>
    <string name="anomaly_type">Type of Anomaly</string>
    <string name="report_anomaly">Report Anomaly</string>
    <string name="all_anomalies">Every Anomaly</string>
    <string name="anomaly_log">Anomaly History</string>
    <string name="send_feedback_anomaly_text_hint">The anomaly is due to...</string>
    <string name="send_feedback_radiolog_text_hint">The snapshot is due to...</string>
    <string name="location">Local</string>
    <string name="failure">Failure</string>
    <string name="finish">Finalize</string>
    <string name="service">Service</string>
    <string name="failure_type">Type of Failure</string>
    <string name="anomaly_category_voice">Voice</string>
    <string name="anomaly_category_internet">Internet</string>
    <string name="anomaly_category_messaging">Messaging</string>
    <string name="anomaly_category_network_coverage">Coverage</string>
    <string name="anomaly_category_other">Other</string>
    <string name="anomaly_type_dropped_call">Dropped call</string>
    <string name="anomaly_type_call_not_established">Unanswered call</string>
    <string name="anomaly_type_lost_call">Missed call</string>
    <string name="anomaly_type_bad_call_audio">Noise / poor audio quality</string>
    <string name="anomaly_type_another_anomaly_type">Other type of anomaly</string>
    <string name="anomaly_type_no_data_access">No data acess</string>
    <string name="anomaly_type_intermittent_access">Intermittent access</string>
    <string name="anomaly_type_slow_connection">Slow acess</string>
    <string name="anomaly_type_message_not_sent">Mesage not sent</string>
    <string name="anomaly_type_message_not_received">Message not received</string>
    <string name="anomaly_type_message_slow_dispatch">Slow shipping</string>
    <string name="anomaly_type_message_delayed_recepetion">Delayed reception</string>
    <string name="anomaly_type_no_indoor_coverage">No indoor coverage</string>
    <string name="anomaly_type_no_outdoor_coverage">No outdoor coverage</string>
    <string name="anomalias_ic_01">anomalias_icon_01</string>
    <string name="anomalias_ic_02">anomalias_icon_02</string>
    <string name="anomalias_ic_03">anomalias_icon_03</string>
    <string name="anomalias_ic_04">anomalias_icon_04</string>
    <string name="anomalias_ic_05">anomalias_icon_05</string>
    <string name="radiolog_register">Radiologs Register</string>
    <string name="radiolog">Radiolog</string>
    <string name="radiolog_idle">Radiolog Idle Mode</string>
    <string name="radiolog_dedicated">Radiolog Dedicated Mode</string>
    <string name="radiolog_event">Event</string>
    <string name="snapshot">Snapshot</string>
    <string name="scanlog">Scanlog</string>
    <string name="take_a_snapshot">Take a snapshot</string>
    <string name="view_radiologs_registers">Consult records</string>
    <string name="view_radiologs_registers_by_date">Consult records by Date</string>
    <string name="radiolog_type">Type of Radiolog</string>
    <string name="report_radiolog">Report Radiolog</string>
    <string name="all_radiologs">Every Radiolog</string>
    <string name="radiolog_log">Radiolog History</string>
    <string name="every_records">Every Records</string>
    <string name="radiolog_register_status">Register status</string>
    <string name="radiolog_plmn_change">PLMN change</string>
    <string name="radiolog_roaming_status">Roaming status</string>
    <string name="radiolog_cell_reselection">Cell Reselection</string>
    <string name="radiolog_handover">Handover</string>
    <string name="radiolog_call_setup">Call Setup</string>
    <string name="radiolog_call_established">Call Established</string>
    <string name="radiolog_call_end">Call End</string>
    <string name="radiolog_call_drop">Call Drop</string>
    <string name="radiolog_call_release">Call Release</string>
    <string name="event_title">Type of Event</string>
    <string name="module">Module</string>
    <string name="iccid">Iccid</string>
    <string name="imsi">Imsi</string>
    <string name="timestamp">Timestamp</string>
    <string name="mac">Device_id</string>
    <string name="gps">Location</string>
    <string name="status">Status</string>
    <string name="mode">Technology</string>
    <string name="cellid">Cell ID</string>
    <string name="plmn">Operator Name</string>
    <string name="roaming">Roaming</string>
    <string name="rxlevel">Signal Strenght</string>
    <string name="mcc">Mcc/Mnc</string>
    <string name="mnc">Mnc</string>
    <string name="pci">Pci</string>
    <string name="psc">Psc</string>
    <string name="tac">Tac</string>
    <string name="Lac">Lac</string>
    <string name="ber">Ber</string>
    <string name="rsrp">Rsrp</string>
    <string name="rsrq">Rsrq</string>
    <string name="rssnr">Rssnr</string>
    <string name="cqi">Cqi</string>
    <string name="neighbours">Neighbours information</string>
    <string name="bssid">Bssid</string>
    <string name="channel">Channel</string>
    <string name="essid">Essid</string>
    <string name="test_types">TYPE OF TESTES</string>
    <string name="test_log">Tests History</string>
    <string name="mobile_network">Mobile network</string>
    <string name="test_wifi">Wi-Fi</string>
    <string name="test_mixed_network">Hybrid</string>
    <string name="test_not_connected">No connection</string>
    <string name="all_tests">Every test</string>
    <string name="send_pending_tests">Send pending tests</string>
    <string name="alert_pending_tests">SEND PENDING TESTS</string>
    <string name="alert_connection">CONNECTION TO MANAGEMENT SYSTEM</string>
    <string name="alert_pending_tests_subtitle">Connection to the management system switched off.</string>
    <string name="alert_pending_tests_message">To send the pending tests, the arQoS pocket needs to be connected to the management system</string>
    <string name="alert_pending_tests_yes">Connect now</string>
    <string name="alert_pending_tests_no">Not now</string>
    <string name="alert_send_tests_now">Send tests now</string>
    <string name="alert_connection_done_subtitle">Connection to the Management System made.</string>
    <string name="alert_connection_done_message">You can already send the pending tests.</string>
    <string name="alert_send_tests_sucess">Pending tests successfully submitted.</string>
    <string name="anomaly_map_info_title">Slide the map</string>
    <string name="anomaly_map_info_info_subtitle">to see more anomalies.</string>
    <string name="radiolog_map_info_info_subtitle">to see more radiologs.</string>
    <string name="test_map_info_subtitle">to see more tests.</string>
    <string name="error_msg_unable_to_create_maps">Sorry! unable to create maps</string>
    <string name="test_name">Name of test</string>
    <string name="test_inactive">Inactive</string>
    <string name="test_running">Ongoing</string>
    <string name="test_completed">Completed</string>
    <string name="test_failed">Failed</string>
    <string name="running_tests">Ongoing tests</string>
    <string name="inactive_tests">Inative tests</string>
    <string name="pending_tests_mobile">Mobile Network Testing</string>
    <string name="pending_tests_wifi">Wi-Fi Network Testing</string>
    <string name="pending_tests_both">Hybrid Network Testing</string>
    <string name="main_development_apn">APN configuration</string>
    <string name="main_development_logfile">Send logcat to file</string>
    <string name="main_development_radiolog">Radiologs</string>
    <string name="development_tests_dtmf">Send DTMF tone</string>
    <string name="development_tests_default_apn">Change default APN</string>
    <string name="development_tests_insert_apn">Insert APN</string>
    <string name="development_tests_logfile">Write logcat to logfile.txt</string>
    <string name="about_dialog_title">ArQoS Pocket</string>
    <string name="about_dialog_text">ArQoS Pocket is an ArQoS probe for installation on Smartphones.\n\n
        The ArQoS is a performance monitoring system for evaluating the quality of services and the experience in multi-technology networks (FTTx, LTE, Ethernet and IP).\n\n
        The system uses fixed and mobile probes and a Management System.</string>
    <string name="about_dialog_copyright">© 2017 Altice Labs, S.A. All rights reserved. </string>
    <string name="test_execution_settings">Test Execution Settings</string>
    <string name="test_type_auto">Auto</string>
    <string name="test_type_manual">Manual</string>
</resources>