<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@mipmap/main_background"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/texttitulo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="89dp"
        android:text="@string/about_dialog_title"
        android:textColor="@color/color_branding"
        android:textSize="@dimen/text_size_large" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/texttitulo1"
        android:layout_margin="15dp"
        android:layout_marginTop="@dimen/global_margin"
        android:textAlignment="center"
        android:text="@string/about_dialog_text"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="50dp"
        android:src="@mipmap/log_altice" />

    <TextView
        android:id="@+id/textimg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:layout_marginTop="@dimen/global_margin"
        android:gravity="center"
        android:text="@string/about_dialog_copyright"
        android:textColor="@color/white"
        android:textSize="@dimen/quaternary_text_size" />

</RelativeLayout>
