<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/linearLayoutLinhaTipdetalhes"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/global_margin"
        android:layout_marginLeft="@dimen/global_margin"
        android:layout_marginRight="@dimen/global_margin"
        android:layout_marginTop="@dimen/global_margin"
        android:text="@string/dialog_title"
        android:textAllCaps="true"
        android:textColor="@color/color_branding"
        android:textStyle="bold"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="@dimen/global_margin"
        android:background="@color/color_branding"></FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/global_margin"
        android:layout_marginLeft="@dimen/global_margin"
        android:layout_marginRight="@dimen/global_margin"
        android:text="@string/dialog_text"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/global_margin"
        android:layout_marginRight="@dimen/global_margin"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/b_ok"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginBottom="@dimen/global_margin"
            android:background="@color/color_branding"
            android:text="@string/dialog_button"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>