<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:pinLegenda="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="@dimen/historic_margin_top"
              android:background="@mipmap/main_background"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/above_map_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"        
        android:orientation="vertical" >
    
    <RelativeLayout
        android:id="@+id/anomalias_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/historic_margin_top"
        
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/bt_swipe_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/bot_swipe_lista"
            android:clickable="true" />

        <ImageView
            android:id="@+id/bt_swipe_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@mipmap/tit_mapa_en" />
    </RelativeLayout>

    <Spinner
        android:id="@+id/spinner_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/historic_margin_top"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:spinnerMode="dialog"
        android:entries="@array/radiologs"
        android:textAllCaps="true"
        android:prompt="@string/radiolog_type" />

    <!-- Ballon markers with number of occurrences -->

    <LinearLayout
        android:id="@+id/occurrences_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/historic_margin_separator_medium"
        android:layout_marginTop="@dimen/historic_margin_separator_small"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="6" >

        <pt.ptinovacao.arqospocket.views.testshistoric.PinView
            android:id="@+id/pinLegenda_radiolog"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            pinLegenda:img_type="@mipmap/pin_radiolog"
            pinLegenda:label_type="@string/radiolog" />

        <pt.ptinovacao.arqospocket.views.testshistoric.PinView
            android:id="@+id/pinLegenda_event"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            pinLegenda:img_type="@mipmap/pin_event"
            pinLegenda:label_type="@string/radiolog_event" />

        <pt.ptinovacao.arqospocket.views.testshistoric.PinView
            android:id="@+id/pinLegenda_snapshot"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.25"
            pinLegenda:img_type="@mipmap/pin_snapshot"
            pinLegenda:label_type="@string/snapshot" />

        <pt.ptinovacao.arqospocket.views.testshistoric.PinView
            android:id="@+id/pinLegenda_scanlog"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.25"
            pinLegenda:img_type="@mipmap/pin_legenda_wi_fi"
            pinLegenda:label_type="@string/scanlog" />

        <!-- Margin to right edge -->
        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.2" />
        
    </LinearLayout>
    </LinearLayout>

    <!-- Map view -->
    <com.google.android.gms.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />

    <RelativeLayout
        android:id="@+id/map_drag_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/historic_margin_separator_small"
        android:layout_marginTop="@dimen/historic_margin_separator_medium"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@+id/icon_info"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/icon_zoom_mapa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/bot_zoom_mapa"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/icon_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/icon_info" />

            <TextView
                
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anomaly_map_info_title"
                android:textColor="@color/color_branding" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiolog_map_info_info_subtitle"
                android:textColor="@color/color_light_grey_text" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>